# worbp2_final

./: .gitignore  .gitigonre  README.md  frames_2025-04-11_10.56.22.gv  frames_2025-04-11_10.57.40.gv  pickup_cup_sequence.sh
demo_videos/: demo_robot_arm.webm  demo_with_terminal.webm
src/simulation/: CMakeLists.txt  package.xml
src/simulation/include/simulation/: cup.hpp  ssc32u_command_parser.hpp  ssc32u_hardware_limitations.hpp  virtual_servo_controller.hpp
src/simulation/launch/: simulation_launch.py
src/simulation/src/: cup.cpp  cup_node.cpp  ssc32u_command_parser.cpp  virtual_servo_controller.cpp  virtual_servo_controller_node.cpp
