<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="a.tunc1@student.han.nl">agit</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend> 
  <depend>geometry_msgs</depend>
  <depend>urdf</depend>
  <depend>sensor_msgs</depend>

  <!--Do i need this?-->
  <exec_depend>urdf_launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
